<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rohitsingla.scrapman.SignUpPage">

    <LinearLayout
        android:id="@+id/ll_username_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/username_email"/>

        <EditText
            android:id="@+id/edit_text_username_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/hint_username_email"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/passwd"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/confirm_passwd"/>

        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/hint_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="phone"
            android:hint="@string/hint_phone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:textSize="16dp"
            android:hint="@string/hint_address"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/submit"/>


</LinearLayout>
