<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.rohitsingla.scrapman.HomePage">

        <LinearLayout
            style="@style/StyleHorizontalLinearLayout">

            <Button
                android:id="@+id/button_price_list"
                style="@style/StyleHomePageButton"
                android:text="@string/price_list" />

            <Button
                android:id="@+id/button_request_pickup"
                style="@style/StyleHomePageButton"
                android:layout_marginLeft="10dp"
                android:text="@string/request_pickup" />

        </LinearLayout>

        <LinearLayout
            style="@style/StyleHorizontalLinearLayout"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_check_past_requests"
                style="@style/StyleHomePageButton"
                android:text="@string/past_requests"/>

            <Button
                android:id="@+id/button_account_settings"
                style="@style/StyleHomePageButton"
                android:layout_marginLeft="10dp"
                android:text="@string/account_settings" />

        </LinearLayout>

        <LinearLayout
            style="@style/StyleHorizontalLinearLayout"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_terms_and_conditions"
                style="@style/StyleHomePageButton"
                android:text="@string/terms_and_conditions" />

            <Button
                android:id="@+id/button_contact_us"
                style="@style/StyleHomePageButton"
                android:layout_marginLeft="10dp"
                android:text="@string/contact_us" />
        </LinearLayout>

        <LinearLayout
            style="@style/StyleHorizontalLinearLayout"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_about_us"
                style="@style/StyleHomePageButton"
                android:text="@string/about_us" />

            <Button
                android:id="@+id/button_log_out"
                style="@style/StyleHomePageButton"
                android:layout_marginLeft="10dp"
                android:text="@string/log_out" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>