<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rohitsingla.scrapman.ChangePassword">

    <LinearLayout
        android:id="@+id/ll_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/current_passwd"/>

        <EditText
            android:id="@+id/edit_text_current_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_current_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/new_passwd"/>

        <EditText
            android:id="@+id/edit_text_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_new_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/confirm_new_passwd"/>

        <EditText
            android:id="@+id/edit_text_confirm_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_new_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/change"/>

</LinearLayout>
