<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rohitsingla.scrapman.ContactUs">

    <TextView
        style="@style/StyleSectionTitle"
        android:text="@string/contact_us" />

    <LinearLayout
        style="@style/StyleHorizontalLinearLayout">
        
        <ImageView
            style="@style/StyleSmallIcon"
            android:src="@drawable/icon_call"/>

        <TextView
            android:id="@+id/text_view_call_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:text="@string/call_us"/>
        
    </LinearLayout>

    <LinearLayout
        style="@style/StyleHorizontalLinearLayout"
        android:layout_marginTop="10dp">

        <ImageView
            style="@style/StyleSmallIcon"
            android:src="@drawable/mail_icon"/>

        <TextView
            android:id="@+id/text_view_email_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:text="@string/email_us"/>

    </LinearLayout>

    <TextView
        style="@style/StyleSectionTitle"
        android:layout_marginTop="20dp"
        android:text="@string/office_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/office_address_detail"/>

</LinearLayout>
