<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.rohitsingla.scrapman.PastRequestDetails">

    <LinearLayout
        android:id="@+id/ll_request_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/request_id" />

        <!-- The text for this TextView will be set dynamically according to the request id-->
        <TextView
            android:id="@+id/text_view_request_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/day"/>

        <!-- The text for this TextView will be set dynamically according to the day-->
        <TextView
            android:id="@+id/text_view_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/time_slot"/>

        <!-- The text for this TextView will be set dynamically according to the time slot-->
        <TextView
            android:id="@+id/text_view_time_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/status"/>

        <!-- The text for this TextView will be set dynamically according to the status-->
        <TextView
            android:id="@+id/text_view_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_weight_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>
